server/compilers/goLiteJS/src/test/ml2/invalid/mau_shortdecl3.go
// no new variables on left side of :=
package main

func main() {
  var b int
  b := 3
}
